--- a/css/design.css
+++ b/css/design.css
@@ -2,17 +2,69 @@ button {
 	border-radius: 8px;
 }
 
-.sizeButtons button {
+.sizeButtons #three {
+	color: blue;
+}
+
+.sizeButtons #four {
+	color: orange;
+}
+
+.sizeButtons #five {
+	color: red;
+}
+
+.sizeButtons #six {
+	color: black;
+}
+
+.sizeButtons div{
+	float: left;
+	margin: 30px;
+}
+
+div.overlay {
 	height: 128px;
 	width: 128px;
 	cursor: pointer;
+	border: 1px solid;
+	text-align: center;
+	cursor: pointer;
+}
+
+
+div.border {
 	border: 2px solid;
 }
 
-div.sizeButtons #three {
-	background: url("../res/3x3grid.png"); 
-	background-size: 128px 128px;
+.overlay:hover div.insideText{
+	opacity: 1;
+}
+
+.overlay:hover img.toggleButton{
+	opacity: 0.5;
+}
+
+.sizeButtons img {
+	transition: .5s ease;
+	float: left;
+	height: 128px;
+	width: 128px;
 	background-repeat: no-repeat;
+	position: relative;
+}
+
+div.insideText {
+	opacity: 0;
+	transition: .5s ease;
+	font-size: 50px;
+	font-family: Arial, Helvetica, sans-serif;
+	line-height:128px;
+	margin: auto;
+	text-align: center;
+	height: 128px;
+	width: 128px;
+	position: absolute;
 }
 
 #resumeButton {
