--- a/css/design.css
+++ b/css/design.css
@@ -1,5 +1,24 @@
 button {
 	border-radius: 8px;
+	height: 50px;
+	width: 150px;
+}
+
+div.animatedContainer {
+	cursor: pointer;
+	height: 128px;
+	width: 256px;
+	border: 1px solid black;
+}
+
+table, td{
+	border: 1px solid maroon;
+	position: relative;
+}
+
+td {
+	font-size: 30px;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .sizeButtons #three {
@@ -23,6 +42,11 @@ button {
 	margin: 30px;
 }
 
+.speedButtons div {
+	float: left;
+	margin: 10px;
+}
+
 div.overlay {
 	height: 128px;
 	width: 128px;
@@ -37,15 +61,16 @@ div.border {
 	border: 2px solid;
 }
 
-.overlay:hover div.insideText{
-	opacity: 1;
-}
-
 .overlay:hover img.toggleButton{
 	opacity: 0.5;
 }
 
+.overlay:hover div.insideText{
+	opacity: 1;
+}
+
 .sizeButtons img {
+	opacity: 1;
 	transition: .5s ease;
 	float: left;
 	height: 128px;
