--- a/css/design.css
+++ b/css/design.css
@@ -11,6 +11,10 @@ div.animatedContainer {
 	border: 1px solid black;
 }
 
+#gameMenu {
+	border-spacing: 2px;
+}
+
 table, td{
 	border: 1px solid maroon;
 	position: relative;
@@ -19,6 +23,13 @@ table, td{
 td {
 	font-size: 30px;
 	font-family: Arial, Helvetica, sans-serif;
+}
+
+.sizeButtons div{
+	float: left;
+	margin-left: 30px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .sizeButtons #three {
@@ -37,11 +48,6 @@ td {
 	color: black;
 }
 
-.sizeButtons div{
-	float: left;
-	margin: 30px;
-}
-
 .speedButtons div {
 	float: left;
 	margin: 10px;
@@ -56,9 +62,9 @@ div.overlay {
 	cursor: pointer;
 }
 
-
 div.border {
 	border: 2px solid;
+	margin-left: 10px;
 }
 
 .overlay:hover img.toggleButton{
@@ -71,7 +77,7 @@ div.border {
 
 .sizeButtons img {
 	opacity: 1;
-	transition: .5s ease;
+	transition: .3s ease;
 	float: left;
 	height: 128px;
 	width: 128px;
@@ -81,7 +87,7 @@ div.border {
 
 div.insideText {
 	opacity: 0;
-	transition: .5s ease;
+	transition: .3s ease;
 	font-size: 50px;
 	font-family: Arial, Helvetica, sans-serif;
 	line-height:128px;
